<resources>
    <string name="app_name">Ecoride</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="go_offline">Go offline</string>
    <string name="icon">icon</string>
    <string name="earnings">Earnings</string>
    <string name="your_trips">Your trips</string>
    <string name="_1">1</string>
    <string name="summary">Summary</string>
    <string name="_2">2</string>
    <string name="trips">Trips</string>
    <string name="_12_2k">12.2K</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="illustration">illustration</string>
    <string name="documents">Documents</string>
    <string name="active_status">Active status</string>
    <string name="today_s_completed_target">Todays Completed Target</string>
    <string name="sample_progress">0/0</string>
    <string name="target_completed">Target completed</string>
    <string name="total_earnings">Total earnings</string>
    <string name="dash">-</string>
    <string name="time">Time</string>
    <string name="settings">Settings</string>
    <string name="distance">Distance</string>
    <string name="amount">Amount</string>
    <string name="no_rides">No rides</string>
    <string name="location">Location</string>
    <string name="enable_app_to_use_location">Enable app to use location</string>
    <string name="notifications">Notifications</string>
    <string name="allow_push_notifications">Allow push notifications</string>
    <string name="go_online">Go online</string>
    <string name="image">image</string>
    <string name="name">Ella chiwaya</string>
    <string name="eee">Ella1@gmail.com</string>
    <string name="home">Home</string>
    <string name="dark_theme">Dark theme</string>
    <string name="preferences">Preferences</string>
    <string name="log_out">Log out</string>
    <string name="no_data_found">No data found</string>
    <string name="_45">45</string>
    <string name="reject">Reject</string>
    <string name="drop_at">Drop at</string>
    <string name="total_rides">Total rides</string>
    <string name="dot">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="spot_booking">Spot booking</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_to_sign_in">Continue to sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="continue__">Continue</string>
    <string name="legal_banner">By continuing, I confirm that i have read and agree to the Terms and conditions and Privacy policy</string>
    <string name="verify">Verify</string>
    <string name="resend_code_in_02_59">Resend code in 02:59</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="resend">Resend code</string>
    <string name="edit">Edit</string>
    <string name="enter_the_6_digit_code_sent_to_you_at">Enter the 6-digit code sent to you at</string>
    <string name="_265_880_28_56_92">+265 880 28 56 92</string>
    <string name="welcome_back">Ecoride</string>
    <string name="malawi">Malawi</string>
    <string name="phone_number">Phone number</string>
    <string name="mw_code">+265</string>
    <string name="log_in">Log in</string>
    <string name="do_not_have_an_account_create_an_account">Do not have an account? Create an account</string>
    <string name="create_profile">Create an account</string>
    <string name="username">Username</string>
    <string name="continue_to_register">Continue to register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="emergency_line">Emergency line</string>
    <string name="ride_progress">Ride progress</string>
    <string name="decline">cancel</string>
    <string name="start">start</string>
    <string name="maps_api_key">AIzaSyAT8TT5ONNjFdWWp3enIDIZrVm5bKcm_G4</string>
    <string name="incoming_request">Incoming request</string>
    <string name="ride_messages">Ride messages</string>
    <string name="today">Today</string>
    <string name="say_something">Say something...</string>
    <string name="profile">Profile</string>
    <string name="kells_kamuzu">Kells Kamuzu</string>
    <string name="kellsworks_gmail_com">kellsworks@gmail.com</string>
    <string name="_265_99_363_48_27">+265 99 363 48 27</string>
    <string name="email_address">Email address</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="view_profile_picture">View profile picture</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="default_notification_channel_id">Ecoride Malawi Driver App</string>
    <string name="accept">Accept</string>
    <string name="ride_has_not_started_yet">Ride has not started yet!</string>
    <string name="you_are_currently_offline_you_will_not_receive_any_incoming_calls_till_you_re_back_online">You are currently offline, you will not receive any incoming requests till you\'re back online</string>
</resources>