<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.earnings.EarningsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_left"
            android:id="@+id/earningsBack"
            app:tint="@color/white"
            android:contentDescription="@string/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="62dp"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/monteserrat_bold"
            android:text="@string/earnings"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap"
            android:layout_alignParentLeft="true" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/today_s_completed_target"
            android:textStyle="bold"
            android:textSize="@dimen/text_medium" />

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal">

            <app.ecoride_agent.customs.CircularProgressBar
                android:id="@+id/earnings_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:max="10"
                app:min="0"
                app:progressBarThickness="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/target_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:text="@string/sample_progress"
                    android:textColor="@color/ripple_color"
                    android:textSize="@dimen/text_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.3"
                    android:maxLines="1"
                    android:text="@string/target_completed"
                    android:textAllCaps="true"
                    android:textColor="@color/ripple_color"
                    android:textSize="@dimen/text_tiny" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingEnd="7dp"
                android:paddingRight="7dp"
                android:text="@string/total_earnings"
                android:textSize="@dimen/text_small"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/lblEarnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/dash"
                android:textColor="@color/ripple_color"
                android:textSize="@dimen/text_large" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="7dp"
            android:background="@color/black"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingTop="7dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/time"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/distance"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:text="@string/amount"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rides_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:scrollbars="vertical"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                app:tint="@color/colorTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/error_image"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/no_rides"
                android:textSize="@dimen/text_small" />


        </RelativeLayout>


    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>