<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trips.progress.TripProgressFragment">

        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressMap"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_primary"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_warning"
                android:layout_margin="10dp"
                android:id="@+id/notStartedIcon"
                android:contentDescription="@string/image" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_has_not_started_yet"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/notStarted"
                android:layout_gravity="center"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:weightSum="2"
            >
            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/decline"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="?colorPrimary"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/green"
                />
        </LinearLayout>



    </RelativeLayout>

</layout>