<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterDetailsFragment">

        <ImageView
            android:id="@+id/registerDetailsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_left"
            app:tint="#969696"
            android:contentDescription="@string/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:id="@+id/createTitle"
            android:text="@string/create_profile"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createTitle"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:id="@+id/registerUsername"
                    android:backgroundTint="@color/gray"
                    android:padding="15dp"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/flag_mw" />


                <View
                    android:layout_width="0.8dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#ECECEC" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mw_code"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints=""
                    android:id="@+id/loginPhone"
                    android:layout_marginLeft="5dp"
                    android:textSize="14sp"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="#969696"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="#ececec"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emergencyPhoneLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emergency_line"
                    android:id="@+id/emergencyPhone"
                    android:backgroundTint="@color/gray"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/gray"
                    android:padding="15dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:id="@+id/c_password"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/gray"
                    android:padding="15dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legal_banner"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                />

            <RelativeLayout
                android:id="@+id/contiueRegister"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20sp"
                android:background="?colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="26dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/continue_to_register"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:visibility="gone"
                    android:id="@+id/cp_pbar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading"
                    android:layout_marginBottom="8dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:id="@+id/registerGo"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_baseline_arrow_forward" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>