<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_action"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        app:tint="@color/grey"
        android:contentDescription="@string/image"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:layout_marginTop="40dp"
    android:layout_width="match_parent"
    android:weightSum="2"
    android:layout_height="match_parent"
        android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_orange"
            android:padding="10dp"
            android:contentDescription="@string/image" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_picture"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_image_24"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_green"
            android:padding="10dp"
            android:contentDescription="@string/image" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_profile_picture"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textStyle="bold"
            />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>